# niubi

./: Cargo.toml  readme.md
benches/: test.rs
examples/: bezier_curve.rs
src/: lib.rs
src/abstruct_curve/: algorithm.rs  bezier.rs  bspline.rs  mod.rs  nurbs.rs  point.rs
src/abstruct_surface/: bezier.rs  bspline.rs  mod.rs  nurbs.rs
src/basics/: algorithm.rs  mod.rs  point.rs
src/basis_function/: bernstein_basis.rs  bspline_basis.rs  knots.rs  mod.rs
src/curve/: bezier.rs  bspline.rs  mod.rs  nurbs.rs
src/na/: bezier_curve.rs  bezier_surface.rs  bspline_curve.rs  bspline_surface.rs  mod.rs  nurbs_curve.rs  nurbs_surface.rs  test_cases.html
src/na_curves/: bezier.rs  bspline.rs  mod.rs  nurbs.rs
src/surface/: bezier.rs  bspline.rs  mod.rs  nurbs.rs
